--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="google" value="notranslate">
 
-    <title>CodePen - abcmaine.beer Landing Page</title>
+    <title>Airline Brewing Company - Coming Soon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="dist/styles/normalize.css">
     <link rel="stylesheet" href="dist/styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Bitter:700|Lato:400,300" rel="stylesheet" type="text/css">
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
   </head>
 
   <body>
