--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="google" value="notranslate">
 
     <title>Airline Brewing Company - Coming Soon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Airline Brewing Company">
+    <meta property="og:description" content="We've got something brewing. Website coming soon.">
+    <meta property="og:url" content="http://pchc.com/">
+    <meta property="og:site_name" content="Airline Brewing Company">
+    <meta property="og:image" content="http://abcmaine.beer/assets/dist/images/logo-full@2x.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="802">
 
     <link rel="stylesheet" href="dist/styles/normalize.css">
     <link rel="stylesheet" href="dist/styles/main.css">
