Oops. Fixed og:url.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Airline Brewing Company">
     <meta property="og:description" content="We've got something brewing. Website coming soon.">
-    <meta property="og:url" content="http://pchc.com/">
+    <meta property="og:url" content="http://abcmaine.beer">
     <meta property="og:site_name" content="Airline Brewing Company">
     <meta property="og:image" content="http://abcmaine.beer/assets/dist/images/logo-full@2x.png">
     <meta property="og:image:type" content="image/png">
