--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="google" value="notranslate">
 
     <title>Airline Brewing Company - Coming Soon</title>
+    <meta name="description" content="We've got something brewing. Website coming soon.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:locale" content="en_US">
@@ -14,7 +15,7 @@
     <meta property="og:description" content="We've got something brewing. Website coming soon.">
     <meta property="og:url" content="http://abcmaine.beer">
     <meta property="og:site_name" content="Airline Brewing Company">
-    <meta property="og:image" content="http://abcmaine.beer/assets/dist/images/logo-full@2x.png">
+    <meta property="og:image" content="http://abcmaine.beer/dist/images/logo-full@2x.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="802">
