--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     <meta property="og:description" content="We've got something brewing. Website coming soon.">
     <meta property="og:url" content="http://abcmaine.beer">
     <meta property="og:site_name" content="Airline Brewing Company">
-    <meta property="og:image" content="http://abcmaine.beer/dist/images/logo-full@2x.png">
+    <meta property="og:image" content="http://abcmaine.beer/dist/images/logo-fb-940x550.png">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="800">
-    <meta property="og:image:height" content="802">
+    <meta property="og:image:width" content="940">
+    <meta property="og:image:height" content="550">
 
     <link rel="stylesheet" href="dist/styles/normalize.css">
     <link rel="stylesheet" href="dist/styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Bitter:700|Lato:400,300" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -34,6 +35,10 @@
     </header>
     <h2>We've got something brewing.</h2>
     <p class="lede">Website coming soon.</p>
+    <section class="keeptabs">
+      <p>Meanwhile, keep tabs on us:</p>
+      <p><a href="https://www.facebook.com/squaretailbrewing/"><i class="fa fa-facebook-square"></i></a></p>
+    </section>
     <section class="locations">
       <p>173 Main Street<br>
         Ellsworth, ME  04605<br>
