--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="description" content="We've got something brewing. Website coming soon.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" href="http://abcmaine.beer/dist/images/favicon.png">
+    <!--[if IE]>
+      <link rel="shortcut icon" href="http://abcmaine.beer/dist/images/favicon.ico">
+    <![endif]-->
+
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Airline Brewing Company">
