--- a/index.html
+++ b/index.html
@@ -53,5 +53,15 @@
         P: 207-584-2337</p>
     </section>
     <!-- © 2016 Airline Brewing Company | Website design by Chris Violette, chris@pixleight.com -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-76655351-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
